--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         :root {
             --primary-color: #ff7e5f;
-            --secondary-color: #ffcc5f;
+            --secondary-color: ##bcbcbc;
             --bg-color: #2a2a2e;
             --text-color: #f0f0f0;
         }
@@ -870,3 +870,4 @@
     </script>
 </body>
 </html>
+
